--- a/CA2/q1.tex
+++ b/CA2/q1.tex
@@ -31,7 +31,7 @@ P_0 + P_1 + ... + P_K = 1\\
 \implies P_0(2 - 2\rho^{K+1} - 1 + \rho) = 1 - \rho\\
 \implies P_0(1 + \rho - 2\rho^{K+1}) = 1 - \rho\\
 \implies P_0 = \frac{1-\rho}{1+\rho - 2\rho^{K+1}}\\
-\implies P_n = 2\rho^n\frac{1-\rho}{1+\rho - 2\rho^{K+1}}
+\implies P_n = 2\rho^n\frac{1-\rho}{1+\rho - 2\rho^{K+1}},\ \text{for $n\ge1$}
 \end{gather*}
 
 (c) At steady state, expected number of customers at the bar is given by E[N].
@@ -65,18 +65,18 @@ Note: We see terms with $\rho^{K}$ or $\rho^{K+1}$ becoming 0 as such terms drop
 \begin{gather*}
 P(N\ge2) = P(N=2) + P(N=3) + ... + P(N=k)\\
 =P_2 + P_3 + ... + P_K\\
-=P_0(\rho^2 + \rho^3 + ...+ \rho^K)\\
-=\frac{(1-\rho)}{1 + \rho - 2\rho^{K+1}}(\rho^2 + \rho^3 + ...+ \rho^K)\\
-=\frac{(1-\rho)}{1 + \rho - 2\rho^{K+1}}\cdot\rho^2(1 + \rho + ...+ \rho^{K-2})\\
-=\frac{(1-\rho)\rho^2}{1 + \rho - 2\rho^{K+1}}\cdot\left[\frac{1-\rho^{K-1}}{1-\rho}\right]\\
-=\frac{\rho^2}{1 + \rho - 2\rho^{K+1}}\cdot\left[1-\rho^{K-1}\right]
+=P_0(2\rho^2 + 2\rho^3 + ...+ 2\rho^K)\\
+=\frac{(1-\rho)}{1 + \rho - 2\rho^{K+1}}(2\rho^2 + 2\rho^3 + ... + 2\rho^K)\\
+=\frac{(1-\rho)}{1 + \rho - 2\rho^{K+1}}\cdot 2\rho^2(1 + \rho + ...+ \rho^{K-2})\\
+=\frac{2(1-\rho)\rho^2}{1 + \rho - 2\rho^{K+1}}\cdot\left[\frac{1-\rho^{K-1}}{1-\rho}\right]\\
+=\frac{2\rho^2}{1 + \rho - 2\rho^{K+1}}\cdot\left[1-\rho^{K-1}\right]
 \end{gather*}
 
 When $K\to\infty$,
 \begin{gather*}
-\lim_{K\to\infty}P(N\ge2) = \frac{\rho^2}{1 + \rho} < \frac{1}{3}\\
-\implies 3\rho^2 < 1 + \rho\\
-\implies 3\rho^2 - \rho - 1< 0
+\lim_{K\to\infty}P(N\ge2) = \frac{2\rho^2}{1 + \rho} < \frac{1}{3}\\
+\implies 6\rho^2 < 1 + \rho\\
+\implies 6\rho^2 - \rho - 1< 0
 \end{gather*}
 
-Solving the above, we get $\frac{1 - \sqrt{13}}{6}<\rho<\frac{1+\sqrt{13}}{6} \ \implies -0.434 < \rho < 0.768$. However, the first part of this is non-sensical as $\rho$ cannot be less than 0 (both $\lambda$ and $\mu$ are positive). Taking that into account, the possible range of values for $\rho$ is given as $0 < \rho < 0.768$.
+Solving the above, we get $\frac{-1}{3}<\rho<\frac{1}{2}$. However, the first part of this is non-sensical as $\rho$ cannot be less than 0 (both $\lambda$ and $\mu$ are positive). Taking that into account, the possible range of values for $\rho$ is given as $0 < \rho < \frac{1}{2}$.
