--- a/CA2/q2.tex
+++ b/CA2/q2.tex
@@ -136,33 +136,33 @@ After the second term, every subsequent pair of terms cancels each other out, le
 \mu=\sum_{n=1}^{\infty}nf_{1}^{(n)} =  2\cdot\frac{1}{3} + 4\cdot(\frac{2}{3}\cdot\frac{1}{5}) + 6\cdot(\frac{2}{3}\cdot\frac{4}{5}\cdot\frac{1}{7}) + 8\cdot(\frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdot\frac{1}{9}) + \cdots\\
 \mu=\sum_{n=1}^{\infty}nf_{1}^{(n)} =  \frac{2}{3} + (\frac{4}{3}\cdot\frac{1}{5}) + (\frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}) + (\frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdot\frac{8}{9}) + \cdots
 \end{gather*}
-The $nth$ term can be represented as $t_n = \prod_{i=1}^{n}(1-a_i)$, where $a_n = (2n+1)^{-1}$
+The $nth$ term of the series $\mu$ can be represented as $\eta_n = \prod_{i=1}^{n}(1-a_i)$, where $a_n = (2n+1)^{-1}$
 
-As a series, we can rewrite $t_n$
+As a series, we can rewrite $\eta_n$
 \begin{gather*}
-t_n = \frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdots(1-a_n) = \frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdots(1-\frac{1}{2n+1}) = \frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdots\frac{2n}{2n+1}\\
-\implies t_n =  2^n\frac{1}{3}\cdot\frac{2}{5}\cdot\frac{3}{7}\cdots\frac{n}{2n+1} = \frac{2^n n!}{3\cdot5\cdot7\cdots(2n+1)} =  \frac{2^n n!\cdot2\cdot4\cdot6\cdots2n}{1\cdot2\cdot3\cdot4\cdot5\cdot6\cdot7\cdots2n\cdot(2n+1)}\\
-\implies t_n =  \frac{2^n n!\cdot2^n(1\cdot2\cdot3\cdot4\cdots n)}{1\cdot2\cdot3\cdot4\cdot5\cdot6\cdot7\cdots2n\cdot(2n+1)} = \frac{2^n n!\cdot 2^n n!}{(2n+1)!} = \frac{(2^n n!)^2}{(2n+1)!}
+\eta_n = \frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdots(1-a_n) = \frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdots(1-\frac{1}{2n+1}) = \frac{2}{3}\cdot\frac{4}{5}\cdot\frac{6}{7}\cdots\frac{2n}{2n+1}\\
+\implies \eta_n =  2^n\frac{1}{3}\cdot\frac{2}{5}\cdot\frac{3}{7}\cdots\frac{n}{2n+1} = \frac{2^n n!}{3\cdot5\cdot7\cdots(2n+1)} =  \frac{2^n n!\cdot2\cdot4\cdot6\cdots2n}{1\cdot2\cdot3\cdot4\cdot5\cdot6\cdot7\cdots2n\cdot(2n+1)}\\
+\implies \eta_n =  \frac{2^n n!\cdot2^n(1\cdot2\cdot3\cdot4\cdots n)}{1\cdot2\cdot3\cdot4\cdot5\cdot6\cdot7\cdots2n\cdot(2n+1)} = \frac{2^n n!\cdot 2^n n!}{(2n+1)!} = \frac{(2^n n!)^2}{(2n+1)!}
 \end{gather*}
-Expanding $t_n$, we can write
+Expanding $\eta_n$, we can write
 \begin{gather*}
-t_n = \frac{(2^n n!)^2}{(2n+1)!} = 2^{2n}\frac{(n!)^2}{(2n+1)!} = 4^{n}\frac{(n!)^2}{(2n+1)!}\\
-\implies t_n = 4^n \frac{n^2}{(2n+1)(2n)}\cdot\frac{(n-1)^2}{(2n-1)(2n-2)}\cdot\frac{(n-2)^2}{(2n-3)(2n-4)}\cdots\frac{2^2}{5\cdot4}\cdot\frac{1^2}{3\cdot2}\\
-\implies t_n = 4^n \frac{n^2}{(2n+1)(2n)}\cdot\frac{(n-1)^2}{(2n-1)(2(n-1))}\cdot\frac{(n-2)^2}{(2n-3)(2(n-2))}\cdots\frac{2^2}{5\cdot2\cdot2}\cdot\frac{1^2}{3\cdot2\cdot1}\\
-\implies t_n = 4^n \frac{n}{(2n+1)(2)}\cdot\frac{(n-1)}{(2n-1)(2)}\cdot\frac{(n-2)}{(2n-3)(2)}\cdots\frac{2}{5\cdot2}\cdot\frac{1}{3\cdot2}\\
-\implies t_n = 4^n \frac{n}{(2(n+\frac{1}{2}))(2)}\cdot\frac{(n-1)}{(2(n-\frac{1}{2}))(2)}\cdot\frac{(n-2)}{(2(n-\frac{3}{2}))(2)}\cdots\frac{2}{2\cdot\frac{5}{2}\cdot2}\cdot\frac{1}{2\cdot\frac{3}{2}\cdot2}\\
-\implies t_n = \frac{4^n}{4^n} \frac{n}{(n+\frac{1}{2})}\cdot\frac{(n-1)}{(n-\frac{1}{2})}\cdot\frac{(n-2)}{(n-\frac{3}{2})}\cdots\frac{2}{\frac{5}{2}}\cdot\frac{1}{\frac{3}{2}}\\
-\implies t_n = \frac{n}{(n+\frac{1}{2})}\cdot\frac{(n-1)}{(n-\frac{1}{2})}\cdot\frac{(n-2)}{(n-\frac{3}{2})}\cdots\frac{2}{\frac{5}{2}}\cdot\frac{1}{\frac{3}{2}}
+\eta_n = \frac{(2^n n!)^2}{(2n+1)!} = 2^{2n}\frac{(n!)^2}{(2n+1)!} = 4^{n}\frac{(n!)^2}{(2n+1)!}\\
+\implies \eta_n = 4^n \frac{n^2}{(2n+1)(2n)}\cdot\frac{(n-1)^2}{(2n-1)(2n-2)}\cdot\frac{(n-2)^2}{(2n-3)(2n-4)}\cdots\frac{2^2}{5\cdot4}\cdot\frac{1^2}{3\cdot2}\\
+\implies \eta_n = 4^n \frac{n^2}{(2n+1)(2n)}\cdot\frac{(n-1)^2}{(2n-1)(2(n-1))}\cdot\frac{(n-2)^2}{(2n-3)(2(n-2))}\cdots\frac{2^2}{5\cdot2\cdot2}\cdot\frac{1^2}{3\cdot2\cdot1}\\
+\implies \eta_n = 4^n \frac{n}{(2n+1)(2)}\cdot\frac{(n-1)}{(2n-1)(2)}\cdot\frac{(n-2)}{(2n-3)(2)}\cdots\frac{2}{5\cdot2}\cdot\frac{1}{3\cdot2}\\
+\implies \eta_n = 4^n \frac{n}{(2(n+\frac{1}{2}))(2)}\cdot\frac{(n-1)}{(2(n-\frac{1}{2}))(2)}\cdot\frac{(n-2)}{(2(n-\frac{3}{2}))(2)}\cdots\frac{2}{2\cdot\frac{5}{2}\cdot2}\cdot\frac{1}{2\cdot\frac{3}{2}\cdot2}\\
+\implies \eta_n = \frac{4^n}{4^n} \frac{n}{(n+\frac{1}{2})}\cdot\frac{(n-1)}{(n-\frac{1}{2})}\cdot\frac{(n-2)}{(n-\frac{3}{2})}\cdots\frac{2}{\frac{5}{2}}\cdot\frac{1}{\frac{3}{2}}\\
+\implies \eta_n = \frac{n}{(n+\frac{1}{2})}\cdot\frac{(n-1)}{(n-\frac{1}{2})}\cdot\frac{(n-2)}{(n-\frac{3}{2})}\cdots\frac{2}{\frac{5}{2}}\cdot\frac{1}{\frac{3}{2}}
 \end{gather*}
-Subtracting $\frac{1}{2}$ from all the numerators inevitably leaves us with a term smaller than $t_n$. Therefore,
+Subtracting $\frac{1}{2}$ from all the numerators inevitably leaves us with a term smaller than $\eta_n$. Therefore,
 \begin{gather*}
-t_n \ge\frac{n-\frac{1}{2}}{(n+\frac{1}{2})}\cdot\frac{(n-\frac{3}{2})}{(n-\frac{1}{2})}\cdot\frac{(n-\frac{5}{2})}{(n-\frac{3}{2})}\cdots\frac{\frac{3}{2}}{\frac{5}{2}}\cdot\frac{\frac{1}{2}}{\frac{3}{2}}\\
-\implies t_n \ge \frac{\frac{1}{2}}{n+\frac{1}{2}}
+\eta_n \ge\frac{n-\frac{1}{2}}{(n+\frac{1}{2})}\cdot\frac{(n-\frac{3}{2})}{(n-\frac{1}{2})}\cdot\frac{(n-\frac{5}{2})}{(n-\frac{3}{2})}\cdots\frac{\frac{3}{2}}{\frac{5}{2}}\cdot\frac{\frac{1}{2}}{\frac{3}{2}}\\
+\implies \eta_n \ge \frac{\frac{1}{2}}{n+\frac{1}{2}}
 \end{gather*}
-The last line follows from alternate numerators and denominators cancelling out. We now have $t_n \ge \frac{1}{2n+1}$, which can be compared against the harmonic series to showcase divergence. By the limit comparison test, for two given series $\sum a_n$ and $\sum b_n$, if $\lim_{n\to\infty} \frac{a_n}{b_n} = c$ for $0<c<\infty$, where $a_n,b_n$ are respectively the $nth$ terms of the series, then either both series converge or both series diverge.
+The last line follows from alternate numerators and denominators cancelling out. We now have $\eta_n \ge \frac{1}{2n+1}$, which can be compared against the harmonic series to showcase divergence. By the limit comparison test, for two given series $\sum a_n$ and $\sum b_n$, if $\lim_{n\to\infty} \frac{a_n}{b_n} = c$ for $0<c<\infty$, where $a_n,b_n$ are respectively the $nth$ terms of the series, then either both series converge or both series diverge.
 
 We have $a_n = \frac{1}{2n+1}, \ b_n = \frac{1}{n}$, the latter denoting the harmonic series.
 \begin{gather*}
 \lim_{n\to\infty} \frac{a_n}{b_n} = \lim_{n\to\infty} \frac{\frac{1}{2n+1}}{\frac{1}{n}} = \lim_{n\to\infty} \frac{n}{2n+1} = \frac{1}{2}, \text{L'Hospital rule}
 \end{gather*}
-As we know that the harmonic series diverges, the series with $nth$ term $a_n = \frac{1}{2n+1}$ also diverges. Therefore the series with nth term $t_n$, which is greater than $a_n$, must also diverge. Hence, the mean recurrence time $\mu$ diverges. This proves that the state 1 is null recurrent \textbf{Answer}.
+As we know that the harmonic series diverges, the series with $nth$ term $a_n = \frac{1}{2n+1}$ also diverges. Therefore the series with nth term $\eta_n$, which is greater than $a_n$, must also diverge. Hence, the mean recurrence time $\mu$ diverges. This proves that the state 1 is null recurrent \textbf{Answer}.
